# IrohaPaint

./: Cargo.toml  android.md  build.rs  license  readme.md  todo.md
.cargo/: config.toml
resources/: get_resources.pl
resources/brushes/: block-in.irohabrush  clean-inking.irohabrush  detail-color.irohabrush  flat-color.irohabrush  monoline.irohabrush  readme.md  smooth-pencil.irohabrush
src/: app.rs  brush.rs  document.rs  editor.rs  icons.rs  lib.rs  main.rs  project.rs  reference.rs
src/canvas/: coordinates.rs  hit_test.rs  interaction.rs  mod.rs  navigator.rs  paint.rs  raster_stroke.rs  region_fill.rs  state.rs  stroke.rs  view.rs
src/document/: paint_layer.rs  path_edit.rs  path_erase.rs  project.rs  stroke_outline.rs
src/export/: dialog.rs  mod.rs  png.rs  svg.rs
src/views/: canvas.rs  icon_button.rs  inspector.rs  menu_bar.rs  mod.rs  navigator.rs  settings_dialog.rs  tool_bar.rs
