[package]
name = "IrohaPaint"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
resvg = { version = "0.47.0", default-features = false, features = ["raster-images"] }
tiny-skia = "0.12.0"
viewkit = { path = "vendor/viewkit" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_Controls_Dialogs"] }
